update port for dev

--- a/.env.sample
+++ b/.env.sample
@@ -1,2 +1,5 @@
 CLIENT_URL="http://localhost:3000"
 
+MONGODB_URI="mongodb+srv://dreamteam:nrJpkgnnbFpkgkHk@abunnywrote.uxuue2v.mongodb.net/funny_shop?retryWrites=true&w=majority"
+
+PORT="5000"
